@@ -51,6 +51,13 @@ is an open-source implementation of the
 Deployment and Configuration standard (D&C) built on top of TAO. </P>
 </LI>
 
+<P>
+After downloading a distribution we strongly advice to subscribe at least to 
+one of the <A
+HREF="http://www.cs.wustl.edu/~schmidt/ACE-mail.html">announce 
+mailing lists</A> to stay informed about new releases and
+important updates.<P>
+
 <A
 HREF="http://www.cs.wustl.edu/~schmidt/commercial-support.html">Commercial
 support and pre-built versions</A> of ACE, TAO, CIAO, and DAnCE are available
