@@ -1,3 +1,8 @@
+Sat Mar 17 12:16:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * docs/Download.html:
+          Added link to the mailing lists with an advice for people to subscribe
+
 Sat Mar 17 12:11:15 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/cleanbuilds.sh:
